feat(auth): adds api key auth to endpoints and adds info to readme

--- a/env.template
+++ b/env.template
@@ -1,2 +1,4 @@
 API_APP_KEY="XXX_PUDUKEY_XXX"
 API_APP_SECRET="XYX_SECRET_XYX"
+PUDU_BASE_URL="https://api.to.pudu.com"
+HACKATHON_API_KEY=MyC00l4p1K3y
