--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ click==8.3.0
 colorama==0.4.6
 dnspython==2.8.0
 docopt==0.6.2
+ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.118.0
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.3.0
+greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -19,20 +21,27 @@ Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+passlib==1.7.4
 pipreqs==0.4.13
+pyasn1==0.6.1
 pydantic==2.12.0
+pydantic-settings==2.11.0
 pydantic_core==2.41.1
 Pygments==2.19.2
 python-dotenv==1.1.1
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.3
 requests==2.32.5
 rich==14.1.0
 rich-toolkit==0.15.1
 rignore==0.7.0
+rsa==4.9.1
 sentry-sdk==2.40.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.44
 starlette==0.48.0
 typer==0.19.2
 typing-inspection==0.4.2
